[news] route + service
